2001-11-19 Daniel Horn <hellcatv@hotmail.com>
	* added terrain config file
	* added texturemap .png image to specify which texture to use
	* added heightmap .png image
	* added png support (soon to port to aux_texture once the cwd stuff is in)
	
	

2001-11-17 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified vegastrike.h to have SIMULATION_ATOM as a define
	  that uses the float simulation_atom_var
	* modified vs_path.cpp to init simulation_atom_var with
	  'simulation_atom' from the config file
	* added simulation_atom in section general to the config file
	

2001-11-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* uncommented AC_LANG_CPLUSPLUS in configure.in

	
2001-11-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added mission_script.cpp,script_*.cpp to src/Makefile.am
	* added script_expression.cpp, script_statement.cpp
	

2001-11-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* added #ifdef HAVE_AL to the volume callbacks
	

2001-11-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified config_xml to have variable subsections
	* modified missions to have a settings section
	* modified missions to have an origin inside settings
	* modified star_system to take three args (3rd: planetname)
	* modified Universe::Init to take those args
	* modified main.cpp to use the new Universe::Init
	
	
2001-11-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified vegastrike.spec
	* added data/vegastrike-data.spec
	* set version in configure.in to 0.1.0cvs
	* added data/Makefile.dist
	* added variable joystick/deadband to vegastrike.config
	* using now this variable in in_joystick
	

2001-11-08 Daniel Horn <hellcatv@hotmail.com>
	* made lights resolution even less so that the sun's melting light won't take up all space
	* fixme lights should have more levels of grainulairty in the future
	* added TargetNearest and TargetThreat commands