@@ -1,9 +1,15 @@
+2001-11-22 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* gethColor now correcly uses hexcolor argument
+	* modified cmd/unit_xml and cmd/terrain to use gethColor instead of getColor
+	* digital hatswitch first try
+	
+
 2001-11-19 Daniel Horn <hellcatv@hotmail.com>
 	* added terrain config file
 	* added texturemap .png image to specify which texture to use
 	* added heightmap .png image
 	* added png support (soon to port to aux_texture once the cwd stuff is in)
-	
 	
 
 2001-11-17 Alexander Rawass <alexannika@users.sourceforge.net>
